<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/playlistNav"
        android:icon="@drawable/playlist"
        android:title="@string/title_playlist" />


    <item
        android:id="@+id/homeNav"
        android:icon="@drawable/home"
        android:title="@string/title_home" />



    <item
        android:id="@+id/songNav"
        android:icon="@drawable/listen"
        android:title = "@string/song_button"/>


</menu>