...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/queue_recycler_view"
        android:name="comp3350.melodia.presentation.QueueFragment"
        android:layout_width="match_parent"
        android:layout_height="626dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/player"
        android:layout_width="55dp"
        android:layout_height="65dp"
        android:layout_marginStart="96dp"
        android:background="@drawable/back"
        android:backgroundTint="?android:attr/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/queue_recycler_view"
...
