<resources>
    <string name="app_name">Melodia</string>
    <string name="home_button">Home</string>
    <string name="playlist_button">Playlist</string>
    <string name="share_button">Share</string>
    <string name="song_button">Listen</string>
    <string name="radio_button">Radio</string>
    <string name="title_activity_playlist">PlaylistActivity</string>
    <string name="title_home">Home</string>
    <string name="title_playlist">Playlist</string>
    <string name="title_share">Share</string>
    <string name="no_account">You need an account to use this feature.</string>
    <string name="login_button">LOGIN</string>
    <string name="register_button">REGISTER</string>
    <string name="name">Name</string>
    <string name="email">Email Address</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="title_radio">Radio</string>
    <string name="queue">Add to Queue</string>
    <string name="add_to_playlist">Add to Playlist</string>
    <string name="wip">This feature is currently a work in progress.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="add_tracks_to_playlist">Add Tracks to Playlist</string>
    <string name="delete">Delete</string>
    <string name="removed_from_playlist">Remove from Playlist</string>
    <string name="remove_from_queue">Remove from Queue</string>
    <string name="play">Play</string>
    <string name="night_mode">Enable Night Mode</string>
    <string name="summaryNight">Turn Night Mode On or Off</string>

</resources>
